--- a/tools/R.jinja2
+++ b/tools/R.jinja2
@@ -2,6 +2,7 @@
 ####### 此文件为自动生成，请勿编辑 #######
 ####### AUTO GENERATED. DO NOT EDIT. #######
 import os
+from kotonebot.backend.util import res_path
 
 {% for lang in data -%}
 {%- for class_name, attrs in lang.resources.items() -%}
