--- a/tools/R.jinja2
+++ b/tools/R.jinja2
@@ -1,8 +1,8 @@
 ####### 图片资源文件 #######
 ####### 此文件为自动生成，请勿编辑 #######
 ####### AUTO GENERATED. DO NOT EDIT. #######
-import os
 from kotonebot.backend.util import res_path
+from kotonebot.backend.core import image
 
 {% for lang in data -%}
 {%- for class_name, attrs in lang.resources.items() -%}
