--- a/tools/R.jinja2
+++ b/tools/R.jinja2
@@ -2,7 +2,7 @@
 ####### 此文件为自动生成，请勿编辑 #######
 ####### AUTO GENERATED. DO NOT EDIT. #######
 from kotonebot.backend.util import res_path
-from kotonebot.backend.core import image
+from kotonebot.backend.core import image, HintBox
 
 
 {% macro render_class_attributes(class) -%}
