chore: R.py 文件生成中加入 Image 标题 & 优化注释图片显示

--- a/tools/R.jinja2
+++ b/tools/R.jinja2
@@ -2,7 +2,7 @@
 ####### 此文件为自动生成，请勿编辑 #######
 ####### AUTO GENERATED. DO NOT EDIT. #######
 from kotonebot.backend.util import res_path
-from kotonebot.backend.core import image, HintBox
+from kotonebot.backend.core import Image, HintBox
 
 
 {% macro render_class_attributes(class) -%}
