feat(*): ImageAnntation 页面与 Python 代码引入 HintPoint 支持

--- a/tools/R.jinja2
+++ b/tools/R.jinja2
@@ -4,7 +4,7 @@
 ####### AUTO GENERATED. DO NOT EDIT. #######
 {%- endif %}
 from kotonebot.tasks.common import sprite_path
-from kotonebot.backend.core import Image, HintBox
+from kotonebot.backend.core import Image, HintBox, HintPoint
 
 
 {% macro render_class_attributes(class) -%}
